# MediaExplorerPro

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  config.h.in  configure.ac
include/: Fixup.h  Types.h
include/discoverer/: IDiscoverer.h
include/factory/: IFileSystem.h
include/filesystem/: IDevice.h  IDirectory.h  IFile.h
include/lib/: Types.h  mxp.h  stdafx.h
include/lib/discoverer/: IDiscoverer.h
include/lib/filesystem/: IDevice.h  IDirectory.h
include/lib/mediaexplorer/: Common.h  IAlbum.h  IAlbumTrack.h  IArtist.h  IAudioTrack.h  ICodec.h  IDeviceListerCb.h  IHistoryEntry.h  ILibraryFolder.h  IMedia.h  IMediaExplorer.h  IMediaExplorerCb.h  IMediaFile.h  IMediaFolder.h  IMetadata.h  IPlaylist.h  ISettings.h  IShowEpisode.h  IVideoTrack.h  LogLevel.h  MediaType.h  Precomp.h  SearchAggregate.h
include/mediaexplorer/: Common.h  IAlbum.h  IAlbumTrack.h  IArtist.h  IAudioTrack.h  ICodec.h  IContainer.h  IDeviceLister.h  IDeviceListerCb.h  IFile.h  IGenre.h  IHistoryEntry.h  ILabel.h  ILogger.h  IMedia.h  IMediaExplorer.h  IMediaExplorerCb.h  IMediaFile.h  IMetadata.h  IMovie.h  IPlaylist.h  ISettings.h  IShow.h  IShowEpisode.h  IStream.h  IVideoTrack.h  LogLevel.h  MediaSearchAggregate.h  MediaType.h  SearchAggregate.h  SettingsKey.h  SortingCriteria.h  Types.h
projects/vs2015/: mxp.sln
projects/vs2015/gui/: mxpgui.vcxproj  mxpgui.vcxproj.filters
projects/vs2015/lib/: config.h  mxp.vcxproj  mxp.vcxproj.filters
projects/vs2015/mxp/: config.h  mxp.sln  mxp.vcxproj  mxp.vcxproj.filters  mxp_cli.cpp  stdafx.h
projects/vs2015/tests/: mxpcli.vcxproj  mxpcli.vcxproj.filters  mxptests.vcxproj  mxptests.vcxproj.filters
src/: Album.cpp  Album.h  AlbumTrack.cpp  AlbumTrack.h  Artist.cpp  Artist.h  AudioTrack.cpp  AudioTrack.h  Codec.cpp  Codec.h  Container.cpp  Container.h  Device.cpp  Device.h  File.cpp  File.h  Folder.cpp  Folder.h  Genre.cpp  Genre.h  History.cpp  History.h  Label.cpp  Label.h  Media.cpp  Media.h  MediaDevice.cpp  MediaDevice.h  MediaExplorer.cpp  MediaExplorer.h  MediaFile.cpp  MediaFile.h  MediaFolder.cpp  MediaFolder.h  Metadata.cpp  Metadata.h  Movie.cpp  Movie.h  Playlist.cpp  Playlist.h  (+10 more)
src/av/: AvCodec.cpp  AvCodec.h  AvContainer.h  AvController.cpp  AvController.h  AvType.cpp  AvType.h  FrameBuffer.h  Histogram.h  MediaContext.cpp  MediaContext.h  MediaController.cpp  MediaController.h  StreamType.h
src/compat/: ConditionVariable.h  Mutex.h  Thread.h
src/database/: DatabaseHelpers.h  Row.h  SqliteConnection.cpp  SqliteConnection.h  SqliteErrors.h  SqliteTools.cpp  SqliteTools.h  SqliteTraits.h  SqliteTransaction.cpp  SqliteTransaction.h  Statement.h
src/discoverer/: DiscovererWorker.cpp  DiscovererWorker.h  FsDiscoverer.cpp  FsDiscoverer.h
src/factory/: DeviceListerFactory.cpp  DeviceListerFactory.h  FileSystemFactory.cpp  FileSystemFactory.h  ParserMediaFactory.cpp  ParserMediaFactory.h
src/filesystem/common/: CommonDevice.cpp  CommonDevice.h  CommonDirectory.cpp  CommonDirectory.h  CommonFile.cpp  CommonFile.h  File.cpp  File.h
src/filesystem/unix/: Device.cpp  Device.h  DeviceLister.cpp  DeviceLister.h  Directory.cpp  Directory.h  File.cpp  File.h
src/filesystem/win32/: Device.cpp  Device.h  DeviceLister.cpp  DeviceLister.h  Directory.cpp  Directory.h
src/gui/: core.cpp  core.h  main.cpp  mxpgui.h  mxpgui.pro
src/gui/GeneratedFiles/: ui_browserpanel.h  ui_clippropertiesdock.h  ui_clipviewerdock.h  ui_downloadspanel.h  ui_editorpanel.h  ui_libraryfoldersdock.h  ui_librarypanel.h  ui_mainwindow.h  ui_statusconsoledock.h
src/gui/Gui/: dockwidgetmanager.cpp  dockwidgetmanager.h  mainwindow.cpp  mainwindow.h  mediaitemdelegate.cpp  mediaitemdelegate.h  mediaitemproxymodel.cpp  mediaitemproxymodel.h  medialistmodel.cpp  medialistmodel.h
src/gui/Media/: media.cpp  media.h  mediafolder.cpp  mediafolder.h  mediaproperty.cpp  mediaproperty.h
src/gui/Settings/: settings.cpp  settings.h  settingvalue.cpp  settingvalue.h
src/gui/Tools/: qsingleton.h  singleton.h
src/image/: IImageContainer.h  Image.cpp  Image.h  JpegImage.cpp  JpegImage.h  JpegImageContainer.h
src/lib/: Album.cpp  AlbumTrack.h  Artist.cpp  AudioTrack.cpp  AudioTrack.h  Container.cpp  Container.h  History.cpp  History.h  Label.cpp  Label.h  LibraryFolder.cpp  LibraryFolder.h  Media.cpp  Media.h  MediaDevice.cpp  MediaExplorer.cpp  MediaExplorer.h  MediaFile.cpp  MediaFile.h  MediaFolder.cpp  MediaFolder.h  Metadata.h  Movie.h  Playlist.cpp  Playlist.h  Settings.cpp  Settings.h  Show.cpp  ShowEpisode.cpp  Stream.cpp  VideoTrack.cpp  VideoTrack.h  mxp.cpp
src/lib/av/: AvCodec.h  FrameBuffer.cpp  MediaContext.cpp  MediaContext.h  MediaController.cpp  MediaController.h  MediaPlayer.cpp  MediaPlayer.h
src/lib/compat/: Mutex.h  Thread.h
src/lib/database/: DatabaseHelpers.h  Row.h  SqliteConnection.cpp  SqliteErrors.h  SqliteTools.cpp  SqliteTools.h  SqliteTraits.h  SqliteTransaction.cpp
src/lib/discoverer/: DiscovererWorker.cpp  DiscovererWorker.h  FsDiscoverer.h  (+1 more)
src/logging/: ConsoleLogger.h  FileLogger.h  IostreamLogger.h  Logger.cpp  Logger.h
src/metadata_services/: FormatService.cpp  FormatService.h  MetadataParser.cpp  MetadataParser.h  MetadataService.cpp  MetadataService.h  ThumbnailService.cpp
src/parser/: MediaContainer.h  MediaType.h  Parser.cpp  Parser.h  ParserMedia.cpp  ParserMedia.h  ParserService.cpp  ParserService.h  Task.h
src/tests/: mxptests.cpp
src/utils/: Cache.h  Charsets.h  Filename.cpp  Filename.h  ModificationsNotifier.cpp  ModificationsNotifier.h  ReadLocker.h  SWMRLock.h  WriteLocker.h
tests/: mxp.cpp  mxp.h
tools/: tools.cmd
tools/msvcedit/: ReadMe.txt  msbuild_edit.cpp  msbuild_edit.h  msvcedit.sln  msvcedit.vcxproj  msvcedit.vcxproj.filters  project.cpp  project.h  serializable.h  stdafx.cpp  xml_serializer.cpp  xml_serializer.h  xml_traits.h
(+80 files in other folders)
